commit que contiene cambios acerca del diseño del elemento card e incorporación de imagenes

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,46 @@
-<body class="background">
-  hola mundo
-
+<body style="background-color: #a2a9b1">
+  <!-- Imagen logo AgileThought -->
+  <div class="info">
+    <a>
+      <img
+        class="logo"
+        src="assets/img/logo-at-color.png"
+        style="text-align: center"
+      />
+    </a>
+  </div>
+  <!-- Card  -->
+  <div class="at-shadow-xl at-radius-xs">
+    <div class="info">
+      <br />
+      <img src="assets/img/fotochavero.jpeg" class="fotoperfil" />
+    </div>
+    <!-- informacion del perfil -->
+    <div class="info">
+      <p class="at-prod-h2">
+        <B>Cristian Chavero</B>
+      </p>
+      <!-- texto acerca del puesto dentro de la empresa -->
+      <p class="at-prod-subtitle-1">Consultor Jr.</p>
+      <!-- Descripción breve personal -->
+      <div class="textbody">
+        <p class="at-prod-body-2">
+          Experiencia como Tech Lead, llevando equipos de desarrollo
+          <br />
+          para la correcta integración e implementación <br />
+          de soluciones considerando tiempo y costos de acuerdo <br />
+          a los requerimientos del negocio.
+        </p>
+        <!-- Boton "saber más" conector con CV -->
+        <div class="boton">
+          <button
+            class="at-btn at-btn-s at-btn-filled-secondary"
+            style="background-color: #4589ff"
+          >
+            Saber más
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
