--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,6 +1,50 @@
 @import 'at-digital-components/sass/index';
 
 
-.background{
-  background-color: at-primary-40;
+// Estilo card
+.at-shadow-xl {
+  align-items: center;
+  background: $at-primary-20;
+  width: 401px;
+  height: 532px;
+  margin-left: auto;
+  margin-right: auto;
+}
+// Estilo imagen logo AgileThought
+.logo{
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
+  height: 70, 23px;
+
+}
+.info{
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+.fotoperfil{
+  width:170px;
+  height: 150px;
+  border-radius:150px;
+  margin: 0 0 0 590px;
+  margin-left: auto;
+  margin-right: auto;
+  }
+
+  .textbody{
+  text-align: center;
+
+  }
+.boton{
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height:32px;
+  width:93px;
+
 }
