Se incorpora segunda pantalla que es el curriculum donde se proyecta la información del perfil

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -36,11 +36,20 @@
           <button
             class="at-btn at-btn-s at-btn-filled-secondary"
             style="background-color: #4589ff"
+            routerLink="/curriculum"
           >
             Saber más
           </button>
+
         </div>
+        <div class="iconos">
+          <a class="facebook" href="https://www.facebook.com/AgileThought"><at-icon name="facebook" [size]="'3x'"></at-icon></a>
+          <a class="link" href="https://mx.linkedin.com/company/agilethought"><at-icon name="linkedin" [size]="'3x'"></at-icon></a>
+          <a  href="https://github.com/cristianchaveroAgile"><img src="assets\img\iconmonstr-github-1.svg" width="35" heigth="35"/></a>
+          </div>
       </div>
     </div>
   </div>
-</body>
+
+  </body>
+
