se agrego inputs y un sidebar para la tercer parte del documento

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -43,9 +43,9 @@
 
         </div>
         <div class="iconos">
-          <a class="facebook" href="https://www.facebook.com/AgileThought"><at-icon name="facebook" [size]="'3x'"></at-icon></a>
-          <a class="link" href="https://mx.linkedin.com/company/agilethought"><at-icon name="linkedin" [size]="'3x'"></at-icon></a>
-          <a  href="https://github.com/cristianchaveroAgile"><img src="assets\img\iconmonstr-github-1.svg" width="35" heigth="35"/></a>
+          <a class="facebook" href="https://www.facebook.com/AgileThought"><img src="assets\img\iconmonstr-facebook-4.svg" width="35" heigth="35"/></a>
+          <a class="link" href="https://mx.linkedin.com/company/agilethought"><img src="assets\img\iconmonstr-linkedin-4.svg" width="35" heigth="35"/></a>
+          <a class="git" href="https://github.com/cristianchaveroAgile"><img src="assets\img\iconmonstr-github-1.svg" width="35" heigth="35"/></a>
           </div>
       </div>
     </div>
