--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -58,9 +58,16 @@
 .facebook{
 
   margin-right: 4em;
+  padding-top: 6px;
 }
 
 .link{
 
   margin-right: 4em;
+  padding-top: 6px;
+}
+.git{
+
+
+  padding-top: 6px;
 }
