--- a/src/app/components/curriculum/curriculum.component.html
+++ b/src/app/components/curriculum/curriculum.component.html
@@ -1,109 +1,175 @@
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
-
+<div class="contenedorprim">
 <header>
+<!-- foto, nombre y puesto del perfil -->
   <div class="foto">
-    <img class="foto" src="assets\img\fotochavero.jpeg">
+    <img class="foto" src="assets\img\fotochavero.jpeg" />
   </div>
-<div class="nom" >
-  <p class="at-prod-h2"><b>Cristian Chavero</b></p>
-  <p class="at-prod-subtitle-1">Consultor Jr.</p>
-</div>
-
-<div class="contelogo">
-    <a  class="facebook" href="https://www.facebook.com/AgileThought"><at-icon name="facebook" [size]="'3x'" width="35" heigth="35"></at-icon></a>
-  <a class="link" href="https://mx.linkedin.com/company/agilethought"><at-icon name="linkedin" [size]="'3x'" width="35" heigth="35"></at-icon></a>
-  <a  href="https://github.com/cristianchaveroAgile"><img src="assets\img\iconmonstr-github-1.svg" width="35" heigth="35"/></a>
-</div>
-
+    <div class="nom">
+    <p class="at-prod-h2"><b>Cristian Chavero</b></p>
+    <p class="at-prod-subtitle-1">Consultor Jr.</p>
+  </div>
+  <!-- logos con hipervinculo hacia la pagina web  -->
+  <div class="contelogo">
+    <a class="facebook" href="https://www.facebook.com/AgileThought"
+      ><img src="assets\img\iconmonstr-facebook-4.svg" width="35" heigth="35"/></a>
+    <a class="link" href="https://mx.linkedin.com/company/agilethought"
+      ><img src="assets\img\iconmonstr-linkedin-4.svg" width="35" heigth="35"/></a>
+    <a href="https://github.com/cristianchaveroAgile"
+      ><img src="assets\img\iconmonstr-github-1.svg" width="35" heigth="35"
+    /></a>
+  </div>
 </header>
-
 <body>
-
   <div class="grid">
+    <!-- Descripción del perfil  -->
     <div>
-    <p class="at-prod-subtitle-1"><b>Acerca de mi</b></p>
-    <p class="at-prod-body-1">Experiencia como Tech Lead, llevando equipos de desarrollo
-     <br>
-     para la correcta integración e implementación <br>
-     de soluciones considerando tiempo y costos de acuerdo <br>
-     a los requerimientos del negocio.</p>
-   </div>
-   <div >
-    <p class="at-prod-subtitle-1"><b>Experiencia</b></p>
-    <p class="at-prod-body-1"><b>Puesto:</b> Consultor Jr. </p>
-    <p class="at-prod-body-1"><b>Empresa:</b> Agile Thought.</p>
-    <p class="at-prod-body-1"><b>Descripción:</b></p>
-    <p class="at-prod-body-1">Data consultant para el área de Big Data, empleando soluciones creativas dentro de la infraestructura de almacenamiento.</p>
-    <p class="at-prod-body-1"><b>Fecha de inicio y fecha de termino:</b> 17 de mayo del 2021 - Presente.</p>
- <hr>
-   </div>
 
-   <div>
-    <p class="at-prod-subtitle-1"><b>Pasatiempos</b></p>
-  </div>
-  <div >
-    <p class="at-prod-body-1"><b>Puesto:</b> Líder técnico. </p>
-    <p class="at-prod-body-1"><b>Empresa:</b> Docsolutions.</p>
-    <p class="at-prod-body-1"><b>Descripción:</b></p>
-    <p class="at-prod-body-1">Liderar a la célula para el desarrollo, integración y despliegue del sistema digitalizador y verificador de datos para clientes mayoritariamente del sector financiero.</p>
-    <p class="at-prod-body-1"><b>Fecha de inicio y fecha de termino:</b> Agosto 2020 - Agosto 2021.</p>
- <hr>
-   </div>
-
-    <div >
-    <p class="at-prod-subtitle-1"><b>Habilidades</b></p>
-    <p class="at-prod-body-1">Inglés <progress  value="50" max="100"></progress></p>
-    <p class="at-prod-body-1">Trabajo en equipo <progress value="95" max="100"></progress></p>
-    <p class="at-prod-body-1">Manejo del estrés <progress value="70" max="100"></progress></p>
-    <p class="at-prod-body-1">Adaptación al cambio <progress value="90" max="100"></progress></p>
-    <p class="at-prod-body-1">Empatía y tolerancia <progress value="100" max="100"></progress></p>
-
-   </div>
-
-
-  <div>
-    <p class="at-prod-subtitle-1"><b>Escolaridad</b></p>
-    <p class="at-prod-body-1"><b>Escuela:</b> Tecnológico de Estudios Superiores de Cuautitlán Izcalli.</p>
-    <p class="at-prod-body-1"><b>Carrera:</b> Ing. en sistemas computacionales.</p>
-    <p class="at-prod-body-1"><b>Fecha de ingreso y fecha de término</b> 29 de agosto del 2016 - 22 de enero del 2021.</p>
-    <hr>
-  </div>
-
+      <p class="at-prod-subtitle-1"><img src="assets\img\avatar.png" width="25" heigth="25"
+        />&nbsp;<b>Acerca de mi</b></p>
+      <p class="at-prod-body-1">
+        Experiencia como Tech Lead, llevando equipos de desarrollo
+        <br />
+        para la correcta integración e implementación <br />
+        de soluciones considerando tiempo y costos de acuerdo <br />
+        a los requerimientos del negocio.
+      </p>
+    </div>
+    <!-- Experiencia del perfil -->
     <div>
-      <p class="at-prod-subtitle-1"><b>Lenguajes de programación</b></p>
-      <p class="at-prod-body-1">Java <progress value="30" max="100"></progress></p>
-      <p class="at-prod-body-1">Python <progress value="30" max="100"></progress></p>
-      <p class="at-prod-body-1">JavaScript<progress value="50" max="100"></progress></p>
-      <p class="at-prod-body-1">SQL <progress value="60" max="100"></progress></p>
-      <p class="at-prod-body-1">PHP <progress value="60" max="100"></progress></p>
+      <p class="at-prod-subtitle-1"><img src="assets\img\avatar.png" width="25" heigth="25"
+        />&nbsp;<b>Experiencia</b></p>
+      <p class="at-prod-body-1"><b>Puesto:</b> Consultor Jr.</p>
+      <p class="at-prod-body-1"><b>Empresa:</b> AgileThought.</p>
+      <p class="at-prod-body-1"><b>Descripción:</b></p>
+      <p class="at-prod-body-1">
+        Data consultant para el área de Big Data, empleando soluciones creativas
+        dentro de la infraestructura de almacenamiento.
+      </p>
+      <p class="at-prod-body-1">
+        <b>Fecha de inicio y fecha de termino:</b> 17 de mayo del 2021 -
+        Presente.
+      </p>
+      <hr />
+    </div>
+    <!-- Pasatiempos del perfil  -->
+    <div>
+      <p class="at-prod-subtitle-1"><img src="assets\img\avatar.png" width="25" heigth="25"
+        />&nbsp;<b>Pasatiempos</b></p>
+      <div class="pasatiempo">
+        <div class="cont1"><at-tag [rounded]="true">Ciclismo</at-tag></div>
+        &nbsp;<div class="cont1"><at-tag [rounded]="true">Viajar</at-tag></div>
+        &nbsp;<div class="cont1"><at-tag [rounded]="true">Box</at-tag></div>
+        &nbsp;<div class="cont1"><at-tag [rounded]="true">Música</at-tag></div>
+      </div>
+    </div>
+    <!-- Segundo bloque de experiencia laboral -->
+    <div>
+      <p class="at-prod-body-1"><b>Puesto:</b> Líder técnico.</p>
+      <p class="at-prod-body-1"><b>Empresa:</b> Docsolutions.</p>
+      <p class="at-prod-body-1"><b>Descripción:</b></p>
+      <p class="at-prod-body-1">
+        Liderar a la célula para el desarrollo, integración y despliegue del
+        sistema digitalizador y verificador de datos para clientes
+        mayoritariamente del sector financiero.
+      </p>
+      <p class="at-prod-body-1">
+        <b>Fecha de inicio y fecha de termino:</b> Agosto 2020 - Agosto 2021.
+      </p>
+      <hr />
+    </div>
+    <!-- Habilidades blandas del perfil -->
+    <div>
+      <p class="at-prod-subtitle-1"><img src="assets\img\avatar.png" width="25" heigth="25"
+        />&nbsp;<b>Habilidades</b></p>
+      <p class="at-prod-body-1">
+        Inglés <progress value="50" max="100"></progress>
+      </p>
+      <p class="at-prod-body-1">
+        Trabajo en equipo <progress value="95" max="100"></progress>
+      </p>
+      <p class="at-prod-body-1">
+        Manejo del estrés <progress value="70" max="100"></progress>
+      </p>
+      <p class="at-prod-body-1">
+        Adaptación al cambio <progress value="90" max="100"></progress>
+      </p>
+      <p class="at-prod-body-1">
+        Empatía y tolerancia <progress value="100" max="100"></progress>
+      </p>
     </div>
 
+    <!-- Escolaridad primer bloque de información -->
     <div>
-    <p class="at-prod-body-1"><b>Escuela:</b> UBAM</p>
-    <p class="at-prod-body-1"><b>Carrera:</b> Técnico en Turismo.</p>
-    <p class="at-prod-body-1"><b>Fecha de ingreso y fecha de término</b> Agosto del 2011 - Julio del 2014.</p>
+      <p class="at-prod-subtitle-1"><img src="assets\img\avatar.png" width="25" heigth="25"
+        />&nbsp;<b>Escolaridad</b></p>
+      <p class="at-prod-body-1">
+        <b>Escuela:</b> Tecnológico de Estudios Superiores de Cuautitlán
+        Izcalli.
+      </p>
+      <p class="at-prod-body-1">
+        <b>Carrera:</b> Ing. en sistemas computacionales.
+      </p>
+      <p class="at-prod-body-1">
+        <b>Fecha de ingreso y fecha de término</b> 29 de agosto del 2016 - 22 de
+        enero del 2021.
+      </p>
+      <hr />
     </div>
-</div>
+    <!-- Lenguajes de programación que maneja el perfil -->
+    <div>
+      <p class="at-prod-subtitle-1"><img src="assets\img\avatar.png" width="25" heigth="25"
+        />&nbsp;<b>Lenguajes de programación</b></p>
+      <p class="at-prod-body-1">
+        Java <progress value="30" max="100"></progress>
+      </p>
+      <p class="at-prod-body-1">
+        Python <progress value="30" max="100"></progress>
+      </p>
+      <p class="at-prod-body-1">
+        JavaScript<progress value="50" max="100"></progress>
+      </p>
+      <p class="at-prod-body-1">
+        SQL <progress value="60" max="100"></progress>
+      </p>
+      <p class="at-prod-body-1">
+        PHP <progress value="60" max="100"></progress>
+      </p>
+    </div>
+    <!-- segundo bloque de información sobre la escolaridad -->
+    <div>
+      <p class="at-prod-body-1"><b>Escuela:</b> UBAM</p>
+      <p class="at-prod-body-1"><b>Carrera:</b> Técnico en Turismo.</p>
+      <p class="at-prod-body-1">
+        <b>Fecha de ingreso y fecha de término</b> Agosto del 2011 - Julio del
+        2014.
+      </p>
+    </div>
+  </div>
 </body>
+
+<div class="editar" >
+  <at-badge [theme]="'red'" [content]="'5'"><at-icon name="create" [size]="'4'" routerLink="/editar">  </at-icon>
+  </at-badge>
+</div>
 <footer>
-
-
+  <!-- Logos e información de contacto -->
   <div class="tel">
-    <at-icon name="phone" [size]="'1.5x'"></at-icon> <a >&nbsp;55-65-71-39-39</a>
+    <at-icon name="phone" [size]="'1.5x'"></at-icon> <a>&nbsp;55-65-71-39-39</a>
   </div>
-
   <div class="email">
-    <at-icon name="email" [size]="'1.5x'"></at-icon> <a >&nbsp;cristian.chavero@agilethought.com</a>
+    <at-icon name="email" [size]="'1.5x'"></at-icon>
+    <a>&nbsp;cristian.chavero@agilethought.com</a>
   </div>
-
   <div class="agile">
-     <a >AgileThought 2021</a>
+    <a>AgileThought 2021</a>
   </div>
-
-
   <div class="localizacion">
-    <at-icon name="pin-drop" [size]="'1.5x'"></at-icon>  <a >&nbsp;Cuautitlán Izcalli, Edo. de México.</a>
- </div>
-
-
-  </footer>
+    <at-icon name="pin-drop" [size]="'1.5x'"></at-icon>
+    <a>&nbsp;Cuautitlán Izcalli, Edo. de México.</a>
+  </div>
+</footer>
+</div>
