--- a/src/app/components/curriculum/curriculum.component.scss
+++ b/src/app/components/curriculum/curriculum.component.scss
@@ -1,3 +1,10 @@
+
+.contenedorprim{
+width: 100%;
+max-width: 1000px;
+margin: 0 auto;
+
+}
 .foto{
   display: flex;
   justify-content: center;
@@ -38,13 +45,28 @@
 display: grid;
 grid-template-columns: 50% 50%;
 padding: 1rem;
+gap: 1em;
+width: 1100px;
+box-sizing: border-box;
+
+
+}
+
+
+.pasatiempo{
+
+display: flex;
+justify-content: center;
+margin-right: 20em;
+
+
 
 }
 
 footer {
   background-color: #3982be;
   position: relative;
-  width:1250px;
+  width: 1100px;
   height: 100px;
   color: white;
 
@@ -85,6 +107,21 @@ footer {
   justify-content: center;
 }
 
+.editar{
+  color: green;
+  position: relative;
+ left: 90%;
+ cursor: pointer;
 
+}
 
+@media screen and (max-width: 400px) {
+.contenedorprim{
 
+  width: 100%;
+}
+.grid{
+  width: 100%;
+}
+
+}
