cambio de formato de imagen

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,5 @@
-<body style="background-color: #a2a9b1">
+<body>
+  <div class="contenedor">
   <!-- Imagen logo AgileThought -->
   <div class="info">
     <a>
@@ -13,7 +14,7 @@
   <div class="at-shadow-xl at-radius-xs">
     <div class="info">
       <br />
-      <img src="assets/img/fotochavero.jpeg" class="fotoperfil" />
+      <img src="assets/img/fotoperfil.jpg" class="fotoperfil" >
     </div>
     <!-- informacion del perfil -->
     <div class="info">
@@ -40,7 +41,7 @@
           >
             Saber más
           </button>
-
+        </div>
         </div>
         <div class="iconos">
           <a class="facebook" href="https://www.facebook.com/AgileThought"><img src="assets\img\iconmonstr-facebook-4.svg" width="35" heigth="35"/></a>
