--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,5 +1,13 @@
 @import 'at-digital-components/sass/index';
+body{
 
+  margin: 0;
+  padding: 0;
+}
+.contenedor{
+
+  background-color: $at-primary-40;
+}
 
 // Estilo card
 .at-shadow-xl {
@@ -7,8 +15,11 @@
   background: $at-primary-20;
   width: 401px;
   height: 532px;
+  margin: 0;
+  padding: 0;
   margin-left: auto;
   margin-right: auto;
+
 }
 // Estilo imagen logo AgileThought
 .logo{
@@ -26,11 +37,12 @@
 
 }
 .fotoperfil{
-  width:170px;
+  width: 170px;
   height: 170px;
-  border-radius:150px;
+  border-radius:200px;
   margin-left: auto;
   margin-right: auto;
+
   }
 
   .textbody{
