--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,14 +1,13 @@
 <body>
   <div class="contenedor">
   <!-- Imagen logo AgileThought -->
+  <div class="contenedorCentral"></div>
   <div class="info">
-    <a>
-      <img
+    <a> <img
         class="logo"
         src="assets/img/logo-at-color.png"
-        style="text-align: center"
-      />
-    </a>
+        style="text-align: center"/>
+   </a>
   </div>
   <!-- Card  -->
   <div class="at-shadow-xl at-radius-xs">
@@ -44,13 +43,12 @@
         </div>
         </div>
         <div class="iconos">
-          <a class="facebook" href="https://www.facebook.com/AgileThought"><img src="assets\img\iconmonstr-facebook-4.svg" width="35" heigth="35"/></a>
-          <a class="link" href="https://mx.linkedin.com/company/agilethought"><img src="assets\img\iconmonstr-linkedin-4.svg" width="35" heigth="35"/></a>
+          <a class="facebook" href="https://www.facebook.com/AgileThought"><at-icon name="facebook" [size]="'3.2x'"></at-icon></a>
+          <a class="link" href="https://mx.linkedin.com/company/agilethought"><at-icon name="linkedin" [size]="'3.2x'"></at-icon></a>
           <a class="git" href="https://github.com/cristianchaveroAgile"><img src="assets\img\iconmonstr-github-1.svg" width="35" heigth="35"/></a>
           </div>
       </div>
     </div>
   </div>
-
   </body>
 
